[package]
name = "marquito"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.1.0"
http = "0.2.6"
memchr = "2.4.1"
once_cell = "1.9.0"
thiserror = "1.0.30"
tokio = { version = "1.15.0", features = ["macros", "rt-multi-thread", "net", "io-util", "time"] }
